gitops/apps/helloworld/helloworld-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    expose-apps: "true"
