gitops/apps/helloworld/helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx-deployment
  namespace: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-nginx
  template:
    metadata:
      labels:
        app: hello-nginx
    spec:
      containers:
      - name: hello-nginx
        image: nginxdemos/hello
        ports:
        - containerPort: 80
