gitops/apps/helloworld/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
  namespace: hello-world
spec:
  ExternalTrafficPolicy: Cluster
  selector:
    app: hello-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
