gitops/apps/helloworld/hello-world.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    expose-apps: "true"
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   namespace: hello-world
# spec:
#   ingressClassName: cilium
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: foo-svc
#             port:
#               number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx-deployment
  namespace: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-nginx
  template:
    metadata:
      labels:
        app: hello-nginx
    spec:
      containers:
      - name: hello-nginx
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
  namespace: hello-world
spec:
  ExternalTrafficPolicy: Cluster
  selector:
    app: hello-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-route
  namespace: hello-world
spec:
  parentRefs:
  - kind: Gateway
    name: main-gateway
    namespace: main-gateway
  rules:
  - backendRefs:
    - name: foo-svc
      port: 80
