gitops/apps/helloworld/helloworld-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-route
  namespace: hello-world
spec:
  hostnames:
  - foo.firmz.xyz
  parentRefs:
  - kind: Gateway
    name: main-gateway
    namespace: main-gateway
  rules:
  - backendRefs:
    - name: foo-svc
      port: 80
