gitops/apps/helloworld/nginx-hello-world.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foo-svc
            port:
              number: 80
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx-deployment
  namespace: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-nginx
  template:
    metadata:
      labels:
        app: hello-nginx
        namespace: hello-world
    spec:
      containers:
      - name: hello-nginx
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
  namespace: hello-world
spec:
  selector:
    app: hello-nginx
  ports:
  - name: http
    port: 8080        # the port referenced by HTTPRoute
    targetPort: 80    # container port exposed by nginxdemos/hello
